2023-12-04T08:09:43Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7083719124 # 2100
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-04
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 297 467 / 298 468
* notice: next accum: outdated-unq outdated-all / unq all: 298 468 / 299 469
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2023-11-15] / [2023-12-04]

2023-11-19T08:08:08Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6919269579 # 2055
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-19
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 296 466 / 298 468
* notice: next accum: outdated-unq outdated-all / unq all: 297 467 / 298 468
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-11-05] / []

2023-11-18T00:31:48Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6910548548 # 2051
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-18
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 295 464 / 298 468
* notice: next accum: outdated-unq outdated-all / unq all: 296 466 / 298 468
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-11-03] / []

2023-11-16T00:32:27Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6884641434 # 2045