@@ -1,12 +1,21 @@
 {
-  "timestamp" : "2023-12-04T08:09:43Z",
+  "timestamp" : "2023-12-16T16:07:37Z",
   "count_outdated" : 468,
   "uniques_outdated" : 298,
-  "count" : 469,
-  "uniques" : 299,
+  "count" : 470,
+  "uniques" : 300,
   "clones" : [
     {
       "timestamp": "2023-12-04T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-12-16T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
